# ship_routing

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md  filter.geojson  readme.md  setup.sh  test.ipynb  test2.ipynb
.github/workflows/: build-container.yml  rust.yml
data/: config.json
data/test_geojson/: planet.geojson  true_land.geojson  true_water.geojson
public-html/: index.html  test.geojson
src/: arc.rs  collision_detection.rs  exploration.rs  fmi.rs  geojson_writer.rs  lib.rs  linestring.rs  main.rs  network_generator.rs  planet.rs  planet_grid.rs  planet_writer.rs  point.rs  point_generator.rs  point_grid.rs  polygon.rs  quadtree.rs  raw_osm_data.rs  route_reader.rs  tiling.rs
src/fmi/: fmi2.rs  mod.rs
src/geometry/: arc.rs  collision_detection.rs  linestring.rs  mod.rs  osm_data.rs  planet.rs  point.rs  polygon.rs
src/grids/: mod.rs  planet_grid.rs  point_grid.rs  point_spatial_partition.rs  polygon_spatial_partition.rs
src/planet_elements/: arc.rs  convex_quadrilateral.rs  coordinate.rs  line.rs  mod.rs  new_planet.rs  path.rs  planet.rs  point.rs  polygon.rs  raw_osm_data.rs  rectangle.rs
src/routing/: bucket_queue.rs  dijkstra_data.rs  dijsktra.rs  fast_graph.rs  graph.rs  mod.rs  naive_graph.rs  route.rs
src/routing/ch/: binary_heap.rs  ch_helper.rs  contraction_helper.rs  contractor.rs  contrator.rs  dijkstra_helper.rs  graph_cleaner.rs  lazy_queue.rs  mod.rs  shortcut_generator.rs  witness_dijkstra.rs
src/routing/dijkstra/: fast_dijkstra.rs  mod.rs  no_option_and_no_expanded_dijkstra.rs
src/routing/hl/: hub_graph.rs  label.rs  label_entry.rs  mod.rs
src/routing/queue/: bucket_queue.rs  heap_queue.rs  mod.rs
src/routing/simple_algorithms/: a_star.rs  (+13 more)
src/spatial_graph/: fmi2.rs  graph.rs  graph_generator.rs  mod.rs
src/spatial_partition/: mod.rs  point_spatial_partition.rs  polygon_spatial_partition.rs  tiling.rs
src/sphere/: mod.rs
tests/: planet_grid_test.rs  planet_test.rs  point-in-polygon.rs
tests/data/: config.json
(+28 files in other folders)
