[package]
name = "osm-test"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 2

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2"
serde_json = "1.0"
indicatif = "0.17"
rayon = "1.8"
geojson = "0.24"
nalgebra = "0.32"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_derive = "1.0.192"
serde = "1.0.192"
