[package]
name = "osm-test"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 2

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2"
serde_json = "1.0"
indicatif = {version = "0.17", features = ["rayon"]}
rayon = "1.8"
geojson = "0.24"
nalgebra = "0.32"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_derive = "1.0.192"
serde = "1.0.192"
clap = { version = "4.4.8", features = ["derive"] }
log = "0.4.20"
image = "0.23"  # Use the latest version available
imageproc = "0.20"  # Use the latest version available
ahash = "0.8.6"
speedy = "0.8.6"
bincode = "1.3.3"
humantime = "2.1.0"
